ON-769 | csd | Alerts Banners | Frontend - Fix faulty deconstruction and broken css

--- a/app/styleguides/_global/alert-banner.css
+++ b/app/styleguides/_global/alert-banner.css
@@ -31,7 +31,7 @@ $mobile-text-line-height: em(17);
       transition: opacity 1s;
     }
 
-    & + & {
+    & + .alert-banner__message {
       opacity: 0;
       max-height: 0;
       border-width:0;
